--- a/css/style-aos-v3.scss
+++ b/css/style-aos-v3.scss
@@ -38,6 +38,8 @@ p {
 .page-background{
   margin: 0;
   background-image: linear-gradient(-90deg, #0C0F13 10%, black 40%, black 60%, #0C0F13 90%);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .first-section {
@@ -83,17 +85,12 @@ p {
   }
 }
 
-.responsive-icon{
-    height: 35vw;
-    max-height: 30vh;
-}
-
 elemento {
   position: relative;
   margin-top: 7vmin;
   padding: 7vmin 0px 0px 0px;
   height: 37vmin;
-  width: 100vw;
+  max-width: 100vw;
 
   display: flex;
   align-items: center;
@@ -123,37 +120,34 @@ elemento:hover p {
     color: rgb(255, 240, 195);
 }
 
-/* elemento img{
-    -webkit-filter: grayscale(25%);
-    filter: grayscale(25%);
-
-    -webkit-transition: 5s -webkit-filter linear;
-    -moz-transition: 5s -moz-filter linear;
-    -moz-transition: 5s filter linear;
-    -ms-transition: 5s -ms-filter linear;
-    -o-transition: 5s -o-filter linear;
-    transition: 5s filter linear, 5s -webkit-filter linear;    
+elemento img{
+  height: 30vw;
+  max-height: 30vh;
+  width: 30vw;
+  overflow: hidden;
 }
 
-elemento:hover img{
-    -webkit-filter: grayscale(0%);
-    filter: grayscale(0%);
+footer {
+  /* Needed for children to be absolutely positioned relative to the parent. */
+  position: relative;
+  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
+  height: auto;
+  margin-top: 9vmin;
+  margin-bottom: 2vmin;
+  // padding-top: 5vh;
+  overflow:hidden;
 
-    -webkit-transition: 5s -webkit-filter linear;
-    -moz-transition: 5s -moz-filter linear;
-    -moz-transition: 5s filter linear;
-    -ms-transition: 5s -ms-filter linear;
-    -o-transition: 5s -o-filter linear;
-    transition: 5s filter linear, 5s -webkit-filter linear;    
-} */
+  /* For text formatting. */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  text-shadow: 0 0 5px #000;
+  /* background: rgba(255, 255, 255, 0.2); */
+  color: white;
+}
 
-/* elemento:hover img {
-    transition: all 1s ease;
-    -webkit-filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.25));
-    filter: drop-shadow(2px 2px 2px rgba(0,0,0,0.25));
-} */
-
-elemento:after {
+elemento:after, footer:after {
     content: '';
     position: absolute;
     width: 24%;
@@ -197,37 +191,6 @@ elemento:last-child:after {
     margin-right: 3.5vmax;
     margin-left: 1vmax;
     max-width: 30vmax
-}
-
-footer {
-  /* Needed for children to be absolutely positioned relative to the parent. */
-  position: relative;
-  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
-  height: 10vmin;
-  margin-top: 9vmin;
-  margin-bottom: 2vmin;
-  padding-top: 0.4vh;
-  overflow:hidden;
-
-  /* For text formatting. */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
-  text-shadow: 0 0 5px #000;
-  /* background: rgba(255, 255, 255, 0.2); */
-  color: white;
-}
-
-footer:after {
-  content: '';
-  position: absolute;
-  width: 24%;
-  left: 38%;
-  top: -1px;
-  border-top: 0.4vh solid;
-  border-image-source: linear-gradient(-90deg, rgba(0, 0, 0, 0), rgb(244, 211, 108), rgba(0, 0, 0, 0));
-  border-image-slice: 1;
 }
 
 a:visited {
